--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Keen made from scratch for Android based on Simon Tatham's algorithm.
+Keen made for Android. Made by Sergey Maltsev.
 
-Made by Sergey Maltsev
+Using and modifying some of Simon Tatham's level generation algorithms.
