Updated read me with an aka
added KenKen aka

--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Keen made for Android. Made by Sergey Maltsev.
+Keen (also known as KenKen) made for Android. Made by Sergey Maltsev.
 
 Using and modifying some of Simon Tatham's level generation algorithms.
