--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Keen for Android</string>
-    <string name="title">Keen</string>
+    <string name="app_name">KenKen</string>
+    <string name="title">KenKen</string>
     <string name="cont">Continue Save</string>
     <string name="play">Play Level</string>
     <string name="diff">Difficulty</string>
